# dnd-near-dice

./: Cargo.toml  DiceExpression.g4  DndNear.Dice.csproj  DndNear.Dice.sln  Justfile  Makefile  README.md
DndNear.Dice.Tests/: DndNear.Dice.Tests.csproj
src/: dice_pool.rs  die.rs  expression.rs  lib.rs  main.rs  result.rs
src/DndNear.Dice/: DiceExpression.g4  DndNear.Dice.csproj  EvaluationResult.cs  EvaluationVisitor.cs  RollResult.cs  Roller.cs
tests/DndNear.Dice.Tests/: DndNear.Dice.Tests.csproj  UnitTest1.cs
